SpringBootDemoApplication/spring-microservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-microservice
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-microservice
  template:
    metadata:
      labels:
        app: spring-microservice
    spec:
      containers:
        - name: spring-microservice
          image: babaacr.azurecr.io/welcome-service:1.0
          resources:
            requests:
              memory: '256Mi'
              cpu: '500m'
            limits:
              memory: '512Mi'
              cpu: '1'
          ports:
            - name: http
              containerPort: 8080
