SpringBootDemoApplication/spring-microservice-service-clusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-microservice-x
  namespace: default
  labels:
    app: spring-microservice-x
spec:
  selector:
    app: spring-microservice-x
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
