SpringBootDemoApplication/spring-microservice-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-microservice-ingress
spec:
  defaultBackend:
    service:
      name: spring-microservice-x
      port: 
        number: 8080
